manage included and excluded files

--- a/_site.yml
+++ b/_site.yml
@@ -9,3 +9,5 @@ navbar:
       href: tags.html
     - text: "About"
       href: about.html
+include: [".nojekyll"]
+exclude: ["LICENSE", "renv", "renv.lock"]
