Avoid navbar dropdown, refactor as a page listing challenges.

--- a/_site.yml
+++ b/_site.yml
@@ -6,9 +6,7 @@ navbar:
     - text: "Home"
       href: index.html
     - text: "Challenges"
-      menu:
-        - text: "The SingleCellExperiment Gallery"
-          href: challenge_singlecellexperiment_gallery.html
+      href: challenges.html
     - text: "Tags"
       href: tags.html
     - text: "About"
